dripmail-sf/force-app/main/default/objects/Domain__c/Domain__c.object-meta.xml
<CustomObject>
    <description>Domains that Emergence Drip Mail has been authorized to send email on behalf of</description>
    <label>Domain</label>
    <nameField>
        <displayFormat>Domain-{000}</displayFormat>
        <label>Domain Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>