dripmail-sf/force-app/main/default/objects/Domain__c/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <description>The actual domain name for this Domain (e.g. emergencelabs.io)</description>
    <label>Domain Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>