dripmail-sf/force-app/main/default/objects/Domain__c/fields/Sender_Count__c.field-meta.xml
<CustomField>
    <fullName>Sender_Count__c</fullName>
    <description>The count of Senders configured for this Domain</description>
    <label>Sender Count</label>
    <summaryForeignKey>Sender__c.Domain__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>