dripmail-sf/force-app/main/default/objects/Domain__c/fields/Senders_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Senders_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a user has reviewed and approved the automatically created Senders for this Domain</description>
    <label>Senders Confirmed</label>
    <type>Checkbox</type>
</CustomField>