dripmail-sf/force-app/main/default/objects/Domain__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if all DNS Tokens for this Domain are completed. A DNS Token is completed once found via lookup on the name server.</description>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>